<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/item1"
        android:title="@string/help"
        android:icon="@drawable/help"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/item2"
        android:title="@string/savedTitle"
        android:icon="@drawable/saved"
        android:orderInCategory="200"
        app:showAsAction="never"/>

    <item android:id="@+id/item3"
        android:title="@string/Dictionary"
        android:icon="@drawable/dictionary"
        android:orderInCategory="10"
        app:showAsAction="always"/>

    <item android:id="@+id/item4"
        android:title="@string/Flight"
        android:icon="@drawable/flight"
        android:orderInCategory="20"
        app:showAsAction="always"/>

    <item android:id="@+id/item5"
        android:title="@string/Article"
        android:icon="@drawable/article"
        android:orderInCategory="30"
        app:showAsAction="always"/>

</menu>