<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:columnCount="2"
    android:rowCount="2"
    android:orientation="horizontal">

       <Button
           android:id="@+id/dicBt"
           android:background="@drawable/bt_bg"
           android:layout_height="wrap_content"


           android:layout_width="0dp"

           android:layout_columnWeight="1"
           android:layout_rowWeight="1"
           android:layout_column="0"
           android:layout_row="0"
           android:layout_gravity="fill"
           android:textAlignment="center"
           android:textSize="15dp"
           android:text="@string/Dictionary">

       </Button>


        <Button
            android:id="@+id/newsBt"
            android:background="@drawable/bt_bg"
            android:layout_height="wrap_content"
            android:layout_width="0dp"

            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="fill"
            android:textAlignment="center"
            android:textSize="15dp"
            android:text="@string/News">
        </Button>


        <Button
            android:id="@+id/flightBt"
            android:background="@drawable/bt_bg"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="fill"
            android:textAlignment="center"
            android:textSize="15dp"
            android:text="@string/Flight">
        </Button>

        <Button
            android:id="@+id/searchBt"
            android:background="@drawable/bt_bg"

            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="fill"
            android:textAlignment="center"
            android:textSize="15dp"
            android:text="@string/Article">
        </Button>




</GridLayout>